--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Experience</span></a>
+            class="mdi-action-trending-up small"></i><span>Experience by 24</span></a>
       </li>
 
       <li class="bold">
@@ -114,7 +114,7 @@
         mdi-av-equalizer
         -->
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-assessment small"></i><span>Skills</span></a>
+            class="mdi-action-assessment small"></i><span>Skills by 29</span></a>
       </li>
       
       <li class="bold">
@@ -132,7 +132,7 @@
         3. mdi-communication-email
         -->
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Contact</span></a>
+            class="mdi-content-mail small"></i><span>Contact og personal</span></a>
       </li>
 
       <li class="bold">
